<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_acquire_token_silent">Acquire Token Silent</string>
    <string name="start">Start</string>
    <string name="tests">Tests</string>
    <string name="stop">Stop</string>
    <string name="results">Results</string>
    <string name="time_remaining">Time Remaining:</string>
    <string name="num_threads">Num Threads:</string>
    <string name="time_elapsed">Time Elapsed:</string>
    <string name="running">Running...</string>
    <string name="retry">Retry</string>
    <string name="time_limit">"Time Limit: "</string>
    <string name="minutes">Minutes</string>
    <string name="pause">Pause</string>
    <string name="continue_button_text">Continue</string>
</resources>
